--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 ENV = 'development'
 
-VUE_APP_BASE_URL = 'http://localhost:5000/'
+VUE_APP_BASE_URL2 = 'http://localhost:5000/'
+VUE_APP_BASE_URL = 'https://api.dashingdog.cn/'
