--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ branches:
     - master
     - fork
 after_success:
-  - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" -o StrictHostKeyChecking=no 'cd ./web/dashingdog-blog-admin
-    && git pull && bash ./script/deploy.sh'
+  - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" -o StrictHostKeyChecking=no  'bash ./script/deploy.sh'
 addons:
   ssh_known_hosts:
     - '$DEPLOY_HOST'
