--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - node14
+  - node
 sudo: required
 branches:
   only:
@@ -18,10 +18,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script:
-  - rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/dist $DEPLOY_USER@$DEPLOY_HOST:tmp/$TRAVIS_BUILD_ID
-  - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" -o StrictHostKeyChecking=no
-'rm -rf /tmp/old.build && mv web/dashingdog-blog-admin/dist /tmp/old.build && mv tmp/$TRAVIS_BUILD_ID web/dashingdog-blog-admin/dist'
+  script: bash ./script deploy.sh
 addons:
   ssh_known_hosts:
     - '$DEPLOY_HOST'
