--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash ./script deploy.sh
+  on:
+    branch:
+      - master
+      - ci-test
 addons:
   ssh_known_hosts:
     - '$DEPLOY_HOST'
