--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ branches:
     - master
     - ci-test
 install:
-  - npm install
+  trur
+  # - npm install
 script:
-  - npm run build
+  true
+  # - npm run build
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_d11afb7726ff_key -iv $encrypted_d11afb7726ff_iv
     -in id_rsa.enc -out id_rsa -d
@@ -18,7 +20,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: bash ./script deploy.sh
+  script: bash ./script/deploy.sh
   on:
     branch:
       - master
