--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ branches:
     - master
     - ci-test
 install:
-  true
-  # - npm install
+  - npm install
 script:
-  true
-  # - npm run build
+  - npm run build
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_d11afb7726ff_key -iv $encrypted_d11afb7726ff_iv
     -in id_rsa.enc -out id_rsa -d
