--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
 ENV = 'development'
 
-VUE_APP_BASE_URL2 = 'http://localhost:5000/'
-VUE_APP_BASE_URL = 'https://api.dashingdog.cn/'
+VUE_APP_BASE_URL = 'http://localhost:5000/'
