feat: ci optimize  (#1)
feat: ci optimize

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,26 @@ language: node_js
 node_js:
   - node
 sudo: required
+branches:
+  only:
+    - master
+    - ci-test
 install:
-  - skip
-script: true
-before_install:
+  - npm install
+script:
+  - npm run build
+before_deploy:
   - openssl aes-256-cbc -K $encrypted_d11afb7726ff_key -iv $encrypted_d11afb7726ff_iv
     -in id_rsa.enc -out id_rsa -d
   - mv id_rsa ~/.ssh
   - chmod 600 ~/.ssh/id_rsa
-branches:
-  only:
-    - master
-after_success:
-  - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" -o StrictHostKeyChecking=no
-  - cd ./web/dashingdog-blog-admin
-  - bash ./script/deploy.sh
-
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: bash ./script/deploy.sh
+  on:
+    branch:
+      - master
 addons:
   ssh_known_hosts:
-    - '$DEPLOY_HOST'
+    - $DEPLOY_HOST
